[package]
name = "err-convert-macro"
version = "0.1.1"
authors = ["Łukasz Kurowski <crackcomm@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
description = "Errors converting macros."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
